# Creepy-simulation

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Creeper_8cpp.html  Creeper_8hpp.html  Creeper_8hpp_source.html  CreepersManager_8cpp.html  Doxyfile  FieldParams_8hpp.html  FieldParams_8hpp_source.html  LICENSE  README.md  SimulationFabric_8hpp.html  SimulationFabric_8hpp.js  SimulationFabric_8hpp_source.html  Simulation_8cpp.html  Simulation_8hpp_source.html  Steve_8cpp.html  StevesManager_8cpp.html  StevesManager_8hpp_source.html  Unit_8cpp.html  ____init_____8py.html  annotated.html  build.py  classCreeper-members.html  classCreeper.html  classCreepersParams.js  classFieldParams-members.html  classFieldParams.html  classFieldParams.js  classSimulation.js  classSimulationFabric.js  classSteve.html  classStevesManager-members.html  classStevesManager.html  classStevesManager.js  classStevesParams-members.html  classStevesParams.js  classUnit.html  (+86 more)
.github/: pull_request_template.md
.github/workflows/: CI.yml  doxygen.yml  integration_test.yml  lint-check.yaml
controller/: CMakeLists.txt  controller.py  pybind_module.cpp
html/: Creeper_8cpp.js  Creeper_8hpp.js  CreepersManager_8hpp.html  CreepersManager_8hpp.js  CreepersManager_8hpp_source.html  FieldParams_8cpp.html  FieldParams_8hpp.js  SimulationFabric_8hpp_source.html  Simulation_8hpp.html  Simulation_8hpp_source.html  Steve_8hpp.html  Steve_8hpp.js  Steve_8hpp_source.html  StevesManager_8hpp.html  StevesManager_8hpp.js  Unit_8hpp.html  Unit_8hpp.js  Unit_8hpp_source.html  annotated.html  annotated_dup.js  block_8py.html  block_8py.js  classCreeper.js  classCreepersManager-members.html  classCreepersManager.html  classCreepersManager.js  classCreepersParams-members.html  classCreepersParams.html  classSimulation-members.html  classSimulation.html  classSimulationFabric-members.html  classSimulationFabric.html  classSteve-members.html  classSteve.js  classStevesParams.html  classUnit-members.html  classUnit.js  classUnitsParams-members.html  classUnitsParams.html  classUnitsParams.js  (+110 more)
html/search/: all_0.js  all_1.js  all_10.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enums_1.js  enumvalues_2.js  enumvalues_5.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_2.js  files_3.js  files_4.js  files_a.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+21 more)
model/: .clang-tidy  CMakeLists.txt  build.py  conan_scripts.py  conanfile.py  conanfile.txt
model/cmake/: sanitizers.cmake
model/creeper-simulation-library/: CMakeLists.txt  Creeper.cpp  Creeper.hpp  CreepersManager.cpp  CreepersManager.hpp  Field.cpp  Field.hpp  Simulation.cpp  Simulation.hpp  SimulationFabric.hpp  SimulationParams.cpp  SimulationParams.hpp  StevesManager.cpp  StevesManager.hpp  Utils.hpp  utils.cpp  utils.hpp
model/creeper-simulation-library/field/: CMakeLists.txt  FieldParams.cpp  FieldParams.hpp
model/creeper-simulation-library/units/: CMakeLists.txt  Creeper.cpp  Creeper.hpp  Steve.cpp  Steve.hpp  Unit.cpp  Unit.hpp
model/creeper-simulation-library/utils/: CMakeLists.txt  utils.cpp  utils.hpp
model/pybind-interface/: CMakeLists.txt  pybind-module.cpp  pybind_module.cpp
model/scripts/: conan.bat
model/tests/: CMakeLists.txt
model/tests/creeper-simulation-library/: CMakeLists.txt  creeper-tests.cpp  field-tests.cpp  steve-tests.cpp
model/tests/interface-test/: test.py
model/tests/interface_test/: test_simulation.py
model/tests/model/creeper-simulation-library/: CMakeLists.txt  creeper-tests.cpp  field-tests.cpp
model/tests/model/interface-test/: test.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_9.js  classes_b.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  files_2.js  files_5.js  files_7.js  files_8.js  files_9.js  (+25 more)
test/: test_block.py  test_entity.py  test_integration.py  test_stress.py  test_view.py
tests/: CMakeLists.txt
tests/model/: CMakeLists.txt  run-test.cpp
tests/model/creeper-simulation-library/: CMakeLists.txt  creeper-tests.cpp  field-tests.cpp
view/: block.py  creeper_drawer.py  handler.py  image_provider.py  logger.py  ocelot.py  running_game.py  ui_elems.py  view.py
view/units/: Entity.py  creeper_drawer.py  entity_drawer.py  ocelot_drawer.py  steve_drawer.py
