[tool.poetry]
name = "creepy-simulation"
version = "0.1.0"
description = ""
authors = ["Lesh79, KotYrod, FerventReaper"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pygame-gui = "^0.6.0"
black = "^24.10.0"
ruff = "^0.7.4"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
